// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImage should render the image 1`] = `
<img
  alt="Product"
  className="productImg class-prueba "
  src="./coffee-mug.png"
/>
`;

exports[`ProductImage should show the component with image 1`] = `
<div
  className="productCard undefined "
>
  <img
    alt="Product"
    className="productImg undefined "
    src="./coffee-mug.png"
  />
</div>
`;
